--- a/site/JS Basics.html
+++ b/site/JS Basics.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Section 2: JavaScript Language Basics</title>
-    </head>
-
-    <body>
-        <h1>Section 2: JavaScript Language Basics</h1>
-    </body>
-    <script src="F:\Front-end Devlopment\Practice\JS Basics Var and datatypes.js"></script>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Meet Surendra Varma</title>
+</head>
+<body>
+<h1>Surendra Varma kovvuri</h1>
+<abbr title="Surndra Varma Kovvuri &quot;Visakhapatnam&quot;"><img alt="Mediamint Career Picture" width="200" src="https://lh3.googleusercontent.com/GqGI1Pxuy7itNOm61jTGKG0IPD9F67cyBUGOvELoIkyuXz_7HQg2zTCAbw4sgSrxzdLw_U2M9yzPaJUc4Vsnkyepa3HQVScooMT99DTylmi821MjET4yF3vYo_fnrvXni5GFtxjh3VXuANkmKcH30eaxYzTeUABKLYSyZ-JZ2UYaiz22bdojOm7yLWkpo0uYpjcii-jQwZXA1gFnE5UNJNYiVpd5clvSV_mz0QO_fOVt9e3YHpPNbAnSxbRH3hg-0p4IPRIvHtS9EuM6KEj3bfwit0dZIr663cOhQGdveEN1kMc0Kq5kqR146DvyEuehRJEMYhLyILWrYf3bZMKWX_GKCQ7QGfPlVnxbbPbiuv9ryLSE_CyhJm0YziPStjq7nvHfO5jOn5sMSXjlAsZhN9PdbtajPHRMEu0ZTxqzBputq-cjkrhR899p3axIdQLEjRRMo4R9HYmyYpYfq5mivaGwLCZ2PsoYJ5O_8ZfjSUQVOL-ZoLjq2jUCTXm_BrgQ27IwATiSydWuMtkndLAQRo6qy-TqZWZs38gcdqiI9McVV_K9kbK0B_PuhBUi73MjYR73qP3WNLWroclDytL9_vNXIICAylxQMBMgmf4zj9Zc7XUVEQczzqN0rP5F0pdf3YMrhVeeIDx13xql-E9XC3P2Ug=w727-h969-no"/></abbr>
+  <p>Hello everyone! It is great to meet you all. I'm Surendra, one of the employee in Mediamint.<br>Let me share about myself</p>
+  <h2>My Hobbies are:</h2>
+  <ol>
+    <li>Running</li>
+    <li>Fighting</li>
+    <li>Playing Football</li>
+  </ol>
+  <p>Come and say hello on Twitter <a href="https://twitter.com/surendra105135">@Surendra</a></p>
+</body>
 </html>
